# schleppa-mcp-client

./: .dockerignore  .env-example  .gitignore  Dockerfile  Pypi-README.md  README.md  docker-build-push.sh  docker-compose.yml  file_mcp_server.py  flask_app.py  heartbeat.py  mysql_mcp_server.py  ollama_connection_manualtest.py  pid_utils.py  pyproject.toml  requirements.txt  setup.py
docs/: index.html
frontend/: MIGRATION.md  README.md  _electron.js  index.html  package.json  preload.js  vite.config.electron.js
frontend/public/: favicon.txt  index.html  manifest.json
frontend/src/: App.jsx  index.jsx
frontend/src/components/: ChatArea.jsx  Sidebar.jsx
frontend/src/services/: api.js
frontend/src/styles/: App.css  index.css
python_mcp_client.egg-info/: PKG-INFO
templates/: index.html
