[project]
name = "schleppa-mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.1",
    "langchain-mcp-adapters>=0.0.1",
    "langgraph>=0.0.1",
    "mcp>=0.0.1",
    "python-dotenv>=1.0.0",
    "langchain-community>=0.3.27",
]
